RESOLVED FIXED56620
chromium: uninitialized field in WebViewImpl
https://bugs.webkit.org/show_bug.cgi?id=56620
Summary chromium: uninitialized field in WebViewImpl
Alexey Marinichev
Reported 2011-03-17 18:08:13 PDT
chromium: uninitialized field in WebViewImpl
Attachments
Patch (1.30 KB, patch)
2011-03-17 18:08 PDT, Alexey Marinichev
kbr: review+
Alexey Marinichev
Comment 1 2011-03-17 18:08:48 PDT
Kenneth Russell
Comment 2 2011-03-17 18:13:00 PDT
Comment on attachment 86127 [details] Patch Oops. I should have caught this during the initial review.
Kenneth Russell
Comment 3 2011-03-17 18:18:02 PDT
Note You need to log in before you can comment on or make changes to this bug.