2011-03-17  Alexey Marinichev  <amarinichev@chromium.org>

Reviewed by Kenneth Russell.

        chromium: uninitialized field in WebViewImpl
        https://bugs.webkit.org/show_bug.cgi?id=56620

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::WebViewImpl):


Canonical link: https://commits.webkit.org/71294@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81422 268f45cc-cd09-0410-ab3c-d52691b4dbfc